# oxdock-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README-DRAFT.md  README.md  clippy.toml  deny.toml  miri-coverage.json  oxbook.passthru.oxfile  test_passthru.md
crates/docgen/mdox/mdox-cli/: Cargo.toml  PROTO.md
crates/docgen/mdox/mdox-cli/src/: main.rs
crates/docgen/oxbook/oxbook-cli/: Cargo.toml  PROTO.md  SPEC-DRAFT.md  temp.interpreter.rust.oxfile
crates/docgen/oxbook/oxbook-cli/src/: lib.rs  main.rs  run_coordinator.rs
crates/docgen/oxbook/oxbook-cli/src/session/: mod.rs  run_coordinator.rs
crates/internal/oxdock-core/: Cargo.toml
crates/internal/oxdock-core/src/: ast.rs  exec.rs  lib.rs
crates/internal/oxdock-core/tests/: commands.rs  incremental.rs
crates/internal/oxdock-embed/: Cargo.toml
crates/internal/oxdock-embed/src/: lib.rs
crates/internal/oxdock-fixture/: Cargo.toml
crates/internal/oxdock-fixture/src/: lib.rs
crates/internal/oxdock-fs/: Cargo.toml
crates/internal/oxdock-fs/src/: embed.rs  lib.rs  policy.rs  resolver.rs  test_utils.rs  workspace_snapshot.rs
crates/internal/oxdock-fs/src/workspace_fs/: access.rs  backend.rs  copy.rs  embed.rs  git.rs  io.rs  memory.rs  mock.rs  mod.rs  path.rs  policy.rs  resolve.rs
crates/internal/oxdock-fs/src/workspace_fs/git/: config.rs  mod.rs  snapshot.rs
crates/internal/oxdock-fs/tests/: path_policy.rs  tempdir_cleanup.rs
crates/internal/oxdock-parser/: Cargo.toml  README.md
crates/internal/oxdock-parser/src/: ast.rs  dsl.pest  lexer.rs  lib.rs  macro_input.rs  parser.rs
crates/internal/oxdock-parser/tests/: env_display.rs  fuzz_parity.proptest-regressions  fuzz_parity.rs  macro_input_parens.rs  platform_display.rs
crates/internal/oxdock-process/: Cargo.toml  README.md
crates/internal/oxdock-process/src/: builtin_env.rs  lib.rs  mock.rs  serial_cargo_env.rs  shell.rs  test_utils.rs
crates/internal/oxdock-process/tests/: interpolation_check.rs  syntax_change.rs
crates/internal/oxdock-workspace-tests/: Cargo.toml  README.md
crates/internal/oxdock-workspace-tests/fixtures/buildtime_macros/no_std_embed/: expectations.txt
crates/internal/oxdock-workspace-tests/fixtures/buildtime_macros/workspace_root_override/: expectations.txt
crates/internal/oxdock-workspace-tests/fixtures/commands/ast_commands/: Cargo.toml  coverage.toml
crates/internal/oxdock-workspace-tests/fixtures/integration/ast_commands/: Cargo.toml  coverage.toml
crates/internal/oxdock-workspace-tests/fixtures/integration/build_from_manifest/: source_a.txt
crates/internal/oxdock-workspace-tests/fixtures/integration/copy_git_include_dirty/: Cargo.toml  case.toml  expectations.txt
crates/internal/oxdock-workspace-tests/fixtures/integration/snapshot_hash_parity/: Cargo.toml  case.toml  expectations.txt
crates/internal/oxdock-workspace-tests/fixtures/integration/temp_cleanup_autorun/: Cargo.toml
crates/internal/oxdock-workspace-tests/fixtures/parity/basic/: tokens.rs
crates/internal/oxdock-workspace-tests/fixtures/parity/env_variables/: dsl.txt  tokens.txt
crates/internal/oxdock-workspace-tests/fixtures/parity/invalid_lowercase/: dsl.txt  expect_error.txt
crates/internal/oxdock-workspace-tests/src/: lib.rs
crates/internal/oxdock-workspace-tests/tests/: commands_harness.rs  fixture_harness.rs  fuzz_harness.rs  integration_harness.rs  parity_harness.rs
crates/internal/oxdock-workspace-tests/tests/fuzz/: fuzz_parity.proptest-regressions  fuzz_parity.rs
crates/oxdock-logic-tests/fixtures/integration/snapshot_hash_parity/: Cargo.toml
crates/runbook/runbook-cli/: Cargo.toml
crates/runbook/runbook-cli/src/: cli.rs  fences.rs  lib.rs  main.rs  output.rs
crates/runbook/runbook-cli/src/session/: mod.rs  run_coordinator.rs
crates/runbook/runbook-cli/src/tui/: app.rs  clipboard.rs  config.rs  editor.rs  keymap.rs  layout.rs  logs.rs  mod.rs  session_api.rs  utils.rs  views.rs
crates/sys/oxdock-process/: Cargo.toml
crates/sys/oxdock-process/src/: builtin_env.rs  lib.rs  mock.rs  serial_cargo_env.rs
doc-ox/: Cargo.toml  README.md
doc-ox/examples/: embed_demo.rs  tree_shell.rs
doc-ox/src/: lib.rs  main.rs
doc-ox/tests/: parse.rs  script.rs
embed-recipe/: Cargo.toml
embed-recipe-macros/: Cargo.toml
embed-recipe-macros/src/: lib.rs
embed-recipe-macros/tests/fixtures/build_from_manifest/: Cargo.toml  source.txt
embed-recipe-macros/tests/fixtures/build_from_manifest/src/: main.rs
embed-recipe/examples/: embed_demo.rs  tree_shell.rs
embed-recipe/src/: lib.rs  main.rs
embed-recipe/tests/: parse.rs  script.rs
oxbook-cli/: Cargo.toml  PROTO.md  README.md  temp.interpreter.bash.oxfile  temp.interpreter.bat.oxfile  temp.interpreter.passthru.oxfile  temp.interpreter.rust.oxfile
oxbook-cli/src/: main.rs
oxdock-buildtime-helpers/: Cargo.toml  README.md
oxdock-buildtime-helpers/src/: lib.rs
oxdock-buildtime-macros/: Cargo.toml  README-DRAFT.md  README.md  build.rs
oxdock-buildtime-macros/examples/: embed_demo.rs
oxdock-buildtime-macros/src/: lib.rs  script_input.rs
oxdock-buildtime-macros/tests/: trybuild.rs
oxdock-buildtime-macros/tests/fixtures/build_exit_fail/: Cargo.toml
oxdock-buildtime-macros/tests/fixtures/build_exit_fail/src/: main.rs
oxdock-buildtime-macros/tests/fixtures/build_from_manifest/: Cargo.toml
oxdock-buildtime-macros/tests/fixtures/build_from_manifest/src/: main.rs
oxdock-buildtime-macros/tests/fixtures/env_injection/: Cargo.toml
oxdock-buildtime-macros/tests/fixtures/guard_scope/: Cargo.toml
oxdock-buildtime-macros/tests/fixtures/guard_scope/src/: main.rs
oxdock-buildtime-macros/tests/fixtures/no_std_embed/: Cargo.toml
oxdock-buildtime-macros/tests/fixtures/no_std_embed/src/: lib.rs
oxdock-buildtime-macros/tests/fixtures/run_failure_reporting/: Cargo.toml
oxdock-buildtime-macros/tests/fixtures/workspace_root_override/: Cargo.toml
oxdock-cli/: Cargo.toml  README-DRAFT.md  README.md  hello.oxfile
oxdock-cli/examples/: embed_demo.rs  tree_shell.rs
oxdock-cli/src/: lib.rs  main.rs
oxdock-cli/tests/: cli_bin.rs  parse.rs  script.rs
(+290 files in other folders)
