[workspace]
members = [
    "crates/internal/oxdock-core",
    "crates/internal/oxdock-embed",
    "crates/internal/oxdock-fixture",
    "crates/internal/oxdock-fs",
    "crates/internal/oxdock-parser",
    "crates/internal/oxdock-process",
    "oxdock-buildtime-macros",
    "oxdock-cli",
]
resolver = "2"

[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.3.0-alpha"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jzombie/oxdock-rs"
publish = true

[workspace.dependencies]
anyhow = "1.0.100"
indoc = "2.0.7"
oxdock-buildtime-macros = { path = "oxdock-buildtime-macros", version = "0.3.0-alpha" }

# Internal crates
oxdock-core = { path = "crates/internal/oxdock-core", version = "0.3.0-alpha" }
oxdock-embed = { path = "crates/internal/oxdock-embed", version = "0.3.0-alpha" }
oxdock-fixture = { path = "crates/internal/oxdock-fixture", version = "0.3.0-alpha" }
oxdock-fs = { path = "crates/internal/oxdock-fs", version = "0.3.0-alpha" }
oxdock-parser = { path = "crates/internal/oxdock-parser", version = "0.3.0-alpha" }
oxdock-process = { path = "crates/internal/oxdock-process", version = "0.3.0-alpha" }
proc-macro2 = "1.0.103"
quote = "1.0.42"
sha2 = "0.10.9"
syn = { version = "2.0", features = ["full", "visit"] }
tempfile = "3.23.0"
toml_edit = "0.24.0"

# Logging/tracing
tracing = "0.1.44"

[workspace.lints.clippy]
disallowed_methods = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"
