[workspace]
members = [
    "crates/internal/oxdock-core",
    "crates/internal/oxdock-embed",
    "crates/internal/oxdock-fixture",
    "crates/internal/oxdock-fs",
    "crates/internal/oxdock-parser",
    "crates/internal/oxdock-process",
    "crates/internal/oxdock-logic-tests",
    "crates/internal/oxdock-test-utils",
    "oxdock-buildtime-helpers",
    "oxdock-buildtime-macros",
    "oxdock-cli",
]
resolver = "2"

[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.5.0-alpha"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jzombie/oxdock-rs"
publish = true

[workspace.dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.23.1"
indoc = "2.0.7"
libc = "0.2.178"
libtest-mimic = "0.8.1"
oxdock-buildtime-helpers = { path = "oxdock-buildtime-helpers", version = "0.5.0-alpha" }
oxdock-buildtime-macros = { path = "oxdock-buildtime-macros", version = "0.5.0-alpha" }
oxdock-core = { path = "crates/internal/oxdock-core", version = "0.5.0-alpha" }
oxdock-embed = { path = "crates/internal/oxdock-embed", version = "0.5.0-alpha" }
oxdock-fixture = { path = "crates/internal/oxdock-fixture", version = "0.5.0-alpha" }
oxdock-fs = { path = "crates/internal/oxdock-fs", version = "0.5.0-alpha" }
oxdock-parser = { path = "crates/internal/oxdock-parser", version = "0.5.0-alpha" }
oxdock-process = { path = "crates/internal/oxdock-process", version = "0.5.0-alpha" }
pest = { version = "2.8.4", default-features = false, features = ["std"] }
pest_derive = "2.8.4"
proc-macro2 = "1.0.103"
proptest = "1.9.0"
quote = "1.0.42"
sha2 = "0.10.9"
syn = { version = "2.0", features = ["full", "visit"] }
tempfile = "3.23.0"
oxdock-test-utils = { path = "crates/internal/oxdock-test-utils", version = "0.5.0-alpha" }
toml_edit = "0.24.0"
tracing = "0.1.44"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[workspace.lints.clippy]
disallowed_methods = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"
