[package]
name = "doc-ox"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true
doc-ox-dsl.workspace = true
doc-ox-buildtime-macros.workspace = true
rust-embed.workspace = true

[dev-dependencies]
indoc.workspace = true
