[package]
name = "oxbook-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
notify = "6.1.1"
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-parser.workspace = true
oxdock-process.workspace = true
sha2.workspace = true
once_cell = "1"

[lints]
workspace = true
