[package]
name = "oxdock-buildtime-macros"
description = "Compile-time macros for bundling assets using OxDock's Docker-inpspired language."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = ["tracing"]
development = []
build = []

[lib]
proc-macro = true

[dependencies]
oxdock-core.workspace = true
oxdock-fs.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing = { workspace = true }

[dev-dependencies]
oxdock-fixture.workspace = true
oxdock-fs = { workspace = true, features = ["embed"] }
oxdock-process.workspace = true
serial_test.workspace = true
