[package]
name = "oxdock-buildtime-macros"
description = "Compile-time macros for bundling assets using OxDock's Docker-inpspired language."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = ["tracing"]
development = []
build = []

[lib]
proc-macro = true

[features]
default = []
# Expose test utilities (e.g., DSL tokenizers) for dev/test builds.
test-support = []

[dependencies]
anyhow.workspace = true
oxdock-core = { workspace = true }
oxdock-embed.workspace = true
oxdock-fs.workspace = true
oxdock-parser = { workspace = true, features = ["proc-macro-api"] }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tracing = { workspace = true }

[dev-dependencies]
oxdock-embed.workspace = true
oxdock-fixture.workspace = true
oxdock-fs.workspace = true
oxdock-process.workspace = true
