[package]
name = "oxdock-cli"
description = "Placeholder crate"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
oxdock-buildtime-macros.workspace = true
oxdock-core.workspace = true
rust-embed.workspace = true
tempfile.workspace = true
oxdock-fs.workspace = true

[dev-dependencies]
indoc.workspace = true
