[package]
name = "oxdock-cli"
description = "Placeholder crate"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# Use non-cli-suffixed binary name if installing from Cargo
[[bin]]
name = "oxdock"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
indoc.workspace = true
oxdock-buildtime-macros.workspace = true
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-process.workspace = true
rust-embed.workspace = true
tempfile.workspace = true
