[package]
name = "oxdock-cli"
description = "Command-line entrypoint for OxDock's Docker-inspired compile-time language that snapshots workspaces and embeds assets."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = ["tracing"]
development = []
build = []

# Use non-cli-suffixed binary name if installing from Cargo
[[bin]]
name = "oxdock"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
indoc.workspace = true
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-process.workspace = true
tempfile.workspace = true

[dev-dependencies]
serial_test.workspace = true
