[package]
name = "oxdock-core"
description = "Placeholder crate"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
oxdock-process.workspace = true

[dev-dependencies]
indoc.workspace = true
oxdock-fs = { workspace = true, features = ["memory-fs"] }
