[package]
name = "oxdock-core"
description = "Core engine for OxDock's Docker-inspired compile-time language, orchestrating workspace snapshots and asset embedding."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = ["tracing"]
development = []
build = []

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
oxdock-parser = { workspace = true }
oxdock-process.workspace = true
sha2.workspace = true

[dev-dependencies]
indoc.workspace = true
oxdock-fs = { workspace = true, features = ["mock-fs"] }
oxdock-process = { workspace = true, features = ["mock-process"] }
oxdock-test-utils = { workspace = true }
