[package]
name = "oxdock-embed"
description = "OxDock binary embedding layer."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
sha2.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
