[package]
name = "oxdock-fixture"
description = "Internal fixture harness for OxDock tests"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
oxdock-process.workspace = true
toml_edit.workspace = true
