[package]
name = "oxdock-fixture"
description = "Test-fixture harness that materializes reproducible Cargo workspaces for OxDock's compile-time, Docker-inspired language."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = ["tracing"]
development = []
build = []

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
oxdock-process.workspace = true
toml_edit.workspace = true
