[package]
name = "oxdock-fs"
description = "Guarded filesystem and workspace utilities for OxDock environments."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = ["tracing"]
development = []
build = []

[features]
mock-fs = []

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
tracing = { workspace = true }

[dev-dependencies]
oxdock-test-utils = { workspace = true }
