[package]
name = "oxdock-parser"
description = "Parser and AST definitions for the OxDock DSL."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
token-input = ["proc-macro2", "syn", "quote"]

[dependencies]
anyhow.workspace = true
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
