[package]
name = "oxdock-process"
description = "Process orchestration layer for OxDock with guard-aware context"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
mock-process = []

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
