[package]
name = "oxdock-process"
description = "Process orchestration for OxDock's Docker-inspired compile-time language, executing commands inside guarded contexts."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
mock-process = []

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
