[package]
name = "runbook-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# TODO: Change to true once crate is finalized for publishing
publish = false

default-run = "runbook-cli"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true

comrak.workspace = true
crossterm = "0.27"
indoc.workspace = true
line-ending.workspace = true
notify.workspace = true
once_cell.workspace = true
os_pipe.workspace = true
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-parser.workspace = true
oxdock-process.workspace = true
ratatui.workspace = true
sha2.workspace = true

[lints]
workspace = true
