[package]
name = "oxdock-process"
description = "Process orchestration for OxDock environments."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
mock-process = []

[dependencies]
anyhow.workspace = true
oxdock-fs.workspace = true
oxdock-sys-test-utils.workspace = true
