[package]
name = "mdox-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
default-run = "mdox-cli"

[dependencies]
anyhow.workspace = true
notify.workspace = true
once_cell.workspace = true
os_pipe.workspace = true
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-parser.workspace = true
oxdock-process.workspace = true
sha2.workspace = true

[lints]
workspace = true
