[package]
name = "oxbook-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# TODO: Change to true once crate is finalized for publishing
publish = false

default-run = "oxbook-cli"

[dependencies]
anyhow.workspace = true
indoc.workspace = true
notify.workspace = true
once_cell.workspace = true
os_pipe.workspace = true
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-parser.workspace = true
oxdock-process.workspace = true
sha2.workspace = true

comrak.workspace = true
crossterm = "0.27"
ratatui = "0.20"

[lints]
workspace = true
