[package]
name = "fixture-build-from-manifest"
version = "0.1.0-alpha"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
oxdock-buildtime-macros.workspace = true
oxdock-fs = { workspace = true, features = ["embed"] }
rust-embed = { workspace = true, features = ["include-exclude"] }
