[package]
name = "fixture-env-injection"
version = "0.4.0-alpha"
edition = "2024"
publish = false
license = "Apache-2.0"

[features]
default = ["oxdock_test"]
oxdock_test = []

[dependencies]
oxdock-buildtime-macros.workspace = true
oxdock-embed.workspace = true

[build-dependencies]
oxdock-buildtime-helpers.workspace = true
