[package]
name = "fixture-snapshot-hash-parity"
version = "0.6.0-alpha"
edition = "2024"
publish = false
license = "Apache-2.0"

[workspace]

[dependencies]
oxdock-buildtime-macros.workspace = true
oxdock-cli.workspace = true
oxdock-core.workspace = true
oxdock-fs.workspace = true
oxdock-parser.workspace = true
